--- a/semana3/sistema-loja/styles/global.css
+++ b/semana3/sistema-loja/styles/global.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 }
 
+
 body {
     width: 100vh;
 }
@@ -11,7 +12,8 @@ body {
 header{
     width: 100vw;
     height: 18vh;
-    background-color: aqua;
+    background: rgb(46,200,201);
+    background: linear-gradient(0deg, rgba(46,200,201,1) 0%, rgba(117,255,169,1) 100%);
 
     display: flex;
     flex-direction: column;
@@ -30,26 +32,26 @@ header .menu{
     align-items: center;
     justify-content: center;
 
-    background-color: rgb(196, 187, 181);
+    background: #5ec5b3;
 }
 
 header .menu a{
     text-decoration: none;
-    background-color: chocolate;
+    background-color: rgba(201, 127, 75, 0.808);
     padding: .4rem;
     margin-left: .5rem;
     border-radius: 5px;
 
     color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 main {
     width: 100vw;
     min-height: 72vh;
 
-    background-color: violet;
+    background-color: whitesmoke;
 }
 
 footer{
