--- a/semana3/sistema-loja/styles/global.css
+++ b/semana3/sistema-loja/styles/global.css
@@ -50,6 +50,10 @@ header .menu a{
 main {
     width: 100vw;
     min-height: 72vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 2rem;
 
     background-color: whitesmoke;
 }
