--- a/semana3/portifolio/formacao-academica.css
+++ b/semana3/portifolio/formacao-academica.css
@@ -1,11 +1,13 @@
-.container {
-    display: flex;
-    justify-content: center;
-}
 
-main .container article{
-    width: 62vw;
-    min-width: 51rem;
+main article{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    max-width: 70%;
     background-color: var(--light-blue);
     margin-bottom: 2rem;
 }
