--- a/semana3/portifolio/styles/global.css
+++ b/semana3/portifolio/styles/global.css
@@ -54,6 +54,7 @@ body{
     padding: 2.5rem;
     color: var(--green);
     background-color: white;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.226);
 
     display: flex;
     justify-content: space-between;
