--- a/semana4/labetube/styles.css
+++ b/semana4/labetube/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
 
     text-decoration: none;
+    font-size: 62.5%;
 }
 
 .container{
@@ -11,3 +12,34 @@
     min-height: 100vh;
 }
 
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    height: 10vh;
+    padding: 2rem;
+    background-color: rgb(221, 107, 107);
+}
+header h1{
+    font-size: 3rem;
+}
+header form{
+    display: flex;
+
+    width: 30rem;
+    height: 3rem;
+    border: 1px solid black;
+}
+header form input {
+    width: 80%;
+    height: 100%;
+}
+header form button {
+    width: 20%;
+    height: 100%;
+
+    font-size: 1rem;
+    font-weight: 700;
+}
