--- a/semana4/labetube/styles.css
+++ b/semana4/labetube/styles.css
@@ -22,6 +22,7 @@ header {
     align-items: center;
 
     height: 10vh;
+    width: 100%;
     padding: 2rem;
     background-color: rgb(221, 107, 107);
 }
@@ -49,6 +50,12 @@ header form button {
 
 /* main */
 main{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    justify-items: center;
+    align-items: center;
+
     min-height: 80vh;
 }
 
@@ -59,6 +66,7 @@ footer{
     align-items: center;
 
     height: 10vh;
+    width: 100%;
 
     font-size: 3rem;
     color:white;
