--- a/semana4/labetube/card.css
+++ b/semana4/labetube/card.css
@@ -4,8 +4,11 @@
     justify-content: space-between;
     align-items: center;
 
+    
     width: 30rem;
     height: 40rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 
     border: 1px solid black;
 }
