--- a/semana4/labetube/styles.css
+++ b/semana4/labetube/styles.css
@@ -49,7 +49,7 @@ header form button {
 }
 
 /* main */
-main{
+.main-home{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto;
