--- a/semana4/labetube/styles.css
+++ b/semana4/labetube/styles.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
 
     text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 62.5%;
 }
 
