--- a/semana4/labetube/styles.css
+++ b/semana4/labetube/styles.css
@@ -5,13 +5,19 @@
     padding: 0;
     box-sizing: border-box;
 
+    overflow-x:hidden;
+
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 62.5%;
 }
 
-.container{
+html, body{
     width: 100vw;
+    min-height: 100vh;
+}
+
+.container{
     min-height: 100vh;
 }
 
@@ -58,6 +64,9 @@ header form button {
     align-items: center;
 
     min-height: 80vh;
+
+    margin: 0;
+    padding: 0;
 }
 
 /* footer */
