--- a/semana4/responsividade/card.css
+++ b/semana4/responsividade/card.css
@@ -5,8 +5,8 @@
     align-items: center;
 
 
-    width: 20rem;
-    height: 25rem;
+    /* width: 20rem;
+    height: 25rem; */
     margin-top: 1rem;
     margin-bottom: 1rem;
 
@@ -16,6 +16,8 @@
 .card > img{
     width: 100%;
     height: 70%;
+
+    margin-bottom: 2rem;
 }
 
 .card .description{
