--- a/semana4/responsividade/Desafio/style.css
+++ b/semana4/responsividade/Desafio/style.css
@@ -14,6 +14,13 @@ header{
 }
 
 .item{
+    height: 15vh;
     margin: 1rem;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
     border: 1px solid black;
 }
