--- a/semana7/labefy/src/App.css
+++ b/semana7/labefy/src/App.css
@@ -16,12 +16,14 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+
+    padding-top: 2rem;
 }
 
 .App .Panel {
     grid-column: 2/3;
     grid-row: 1/2;
-    background-color: white;
+    background-color: rgb(216, 206, 206);
 }
 
 .App .Player {
@@ -32,5 +34,5 @@
     justify-content: center;
     align-items: center;
 
-    background-color: #767676;
+    background-color: whitesmoke;
 }
